feat: update .md to .mdx; update styles.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,9 +6,158 @@
 * {
 	-ms-overflow-style: none; /* for Internet Explorer, Edge */
 	scrollbar-width: none; /* for Firefox */
-	overflow-y: scroll;
 }
 
 *::-webkit-scrollbar {
 	display: none; /* for Chrome, Safari, and Opera */
+}
+
+.prose h1 {
+	font-size: 1.8rem;
+	margin-top: 4rem;
+	margin-bottom: 2rem;
+}
+
+.prose h2 {
+	font-size: 1.3rem;
+}
+
+.prose h3 {
+	font-size: 1.15rem;
+}
+
+.prose h4 {
+	font-size: 1rem;
+}
+
+.prose p {
+	line-height: 2.25;
+}
+
+.prose li {
+	line-height: 2.25;
+}
+
+.prose .anchor {
+	@apply absolute invisible no-underline;
+
+	margin-left: -1em;
+	padding-right: 0.5em;
+	width: 80%;
+	max-width: 700px;
+	cursor: pointer;
+}
+
+.anchor:hover {
+	@apply visible;
+}
+
+.prose a {
+	@apply transition-all decoration-neutral-300 dark:decoration-neutral-500 underline-offset-2 decoration-[0.2em];
+}
+
+.prose .anchor:after {
+	@apply text-neutral-300 dark:text-neutral-700;
+	content: "#";
+}
+
+.prose *:hover > .anchor {
+	@apply visible;
+}
+
+.prose pre {
+	@apply border border-neutral-700 bg-neutral-800;
+}
+
+.prose code {
+	@apply text-neutral-800 dark:text-neutral-200 px-1 py-0.5 border border-neutral-100 dark:border-neutral-700 rounded-lg bg-neutral-100 dark:bg-neutral-800;
+}
+
+.prose pre code {
+	@apply text-neutral-200 bg-neutral-800 dark:text-neutral-200 p-0;
+	border: initial;
+}
+
+.prose img {
+	/* Don't apply styles to next/image */
+	@apply m-0;
+}
+
+.prose sup {
+	padding: 0.1rem;
+}
+
+.prose li:has(> input) {
+	list-style: none;
+}
+
+code[class*="language-"],
+pre[class*="language-"] {
+	@apply text-neutral-50;
+}
+
+pre::-webkit-scrollbar {
+	display: none;
+}
+
+pre {
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+}
+
+/* Remove Safari input shadow on mobile */
+input[type="text"],
+input[type="email"] {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+}
+
+.prose .tweet a {
+	text-decoration: inherit;
+	font-weight: inherit;
+}
+
+table {
+	display: block;
+	max-width: fit-content;
+	overflow-x: auto;
+	white-space: nowrap;
+}
+
+.prose .callout > p {
+	margin: 0 !important;
+}
+
+[data-rehype-pretty-code-fragment] code {
+	@apply grid min-w-full break-words rounded-none border-0 bg-transparent p-0 text-sm text-black;
+	counter-reset: line;
+	box-decoration-break: clone;
+}
+[data-rehype-pretty-code-fragment] .line {
+	@apply py-1;
+}
+[data-rehype-pretty-code-fragment] [data-line-numbers] > .line::before {
+	counter-increment: line;
+	content: counter(line);
+	display: inline-block;
+	width: 1rem;
+	margin-right: 1rem;
+	text-align: right;
+	color: gray;
+}
+[data-rehype-pretty-code-fragment] .line--highlighted {
+	@apply bg-slate-500 bg-opacity-10;
+}
+[data-rehype-pretty-code-fragment] .line-highlighted span {
+	@apply relative;
+}
+[data-rehype-pretty-code-fragment] .word--highlighted {
+	@apply rounded-md bg-slate-500 bg-opacity-10 p-1;
+}
+[data-rehype-pretty-code-title] {
+	@apply px-4 py-3 font-mono text-xs font-extrabold border rounded-t-lg text-neutral-200 border-neutral-700 bg-neutral-700;
+}
+[data-rehype-pretty-code-title] + pre {
+	@apply mt-0 rounded-t-none border-t-0;
 }
